# posterbot-rs

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  README_RU.md  compose.yml
migrations/: 0001_init.sql  0002_with_settings.sql
src/: config.rs  lib.rs  locales.rs  main.rs
src/bot/: admin.rs  media.rs  mod.rs  moderation.rs  proposals.rs
src/db/: mod.rs  models.rs  repository.rs
tests/: db_test.rs
